parser.output
State 52 conflicts: 1 shift/reduce
State 93 conflicts: 7 shift/reduce
State 97 conflicts: 1 shift/reduce
State 141 conflicts: 1 shift/reduce


Grammar

    0 $accept: function $end

    1 function: function_header optional_variable body

    2 function_header: FUNCTION IDENTIFIER parameters RETURNS type ';'
    3                | FUNCTION IDENTIFIER error ';'

    4 parameters: ε
    5           | parameter_list

    6 parameter_list: parameter
    7               | parameter_list ',' parameter
    8               | parameter_list error

    9 parameter: IDENTIFIER ':' type

   10 type: INTEGER
   11     | CHARACTER
   12     | REAL

   13 optional_variable: optional_variable variable
   14                  | optional_variable error
   15                  | ε

   16 variable: IDENTIFIER ':' type IS statement ';'
   17         | IDENTIFIER ':' LIST OF type IS list ';'

   18 list: '(' expressions ')'

   19 expressions: expressions ',' expression
   20            | expression

   21 body: BEGIN_ statements END ';'

   22 statements: statements statement_
   23           | ε

   24 statement_: statement ';'
   25           | error ';'

   26 statement: expression
   27          | if_statement
   28          | fold_statement
   29          | when_statement
   30          | switch_statement

   31 switch_statement: SWITCH expression IS cases ENDSWITCH
   32                 | SWITCH expression IS cases OTHERS ARROW statement ';' ENDSWITCH

   33 when_statement: WHEN condition ',' expression ':' expression

   34 fold_statement: FOLD direction operator operand ENDFOLD

   35 direction: LEFT
   36          | RIGHT

   37 operator: ADDOP
   38         | MULOP
   39         | RELOP

   40 operand: list
   41        | IDENTIFIER

   42 if_statement: IF condition THEN statements elsif_clauses optional_else ENDIF

   43 elsif_clauses: elsif_clauses elsif_clause
   44              | ε

   45 elsif_clause: ELSIF condition THEN statements

   46 optional_else: ELSE statements
   47              | ε

   48 cases: cases case
   49      | ε

   50 case: CASE INT_LITERAL ARROW statements ';'
   51     | CASE error ARROW statements ';'
   52     | CASE INT_LITERAL ARROW error ';'

   53 condition: condition OROP logical_and
   54          | logical_and

   55 logical_and: logical_and ANDOP logical_not
   56            | logical_not

   57 logical_not: NOTOP logical_not
   58            | relation

   59 relation: '(' condition ')'
   60         | expression RELOP expression

   61 expression: expression operator term
   62           | term

   63 term: term MULOP factor
   64     | term REMOP factor
   65     | factor

   66 factor: factor EXPOP primary
   67       | primary

   68 primary: '(' expression ')'
   69        | NEGOP primary
   70        | INT_LITERAL
   71        | CHAR_LITERAL
   72        | REAL_LITERAL
   73        | HEX_LITERAL
   74        | IDENTIFIER '(' expression ')'
   75        | IDENTIFIER


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 18 59 68 74
    ')' (41) 18 59 68 74
    ',' (44) 7 19 33
    ':' (58) 9 16 17 33
    ';' (59) 2 3 16 17 21 24 25 32 50 51 52
    error (256) 3 8 14 25 51 52
    IDENTIFIER (258) 2 3 9 16 17 41 74 75
    INT_LITERAL (259) 50 52 70
    CHAR_LITERAL (260) 71
    HEX_LITERAL (261) 73
    REAL (262) 12
    REAL_LITERAL (263) 72
    ADDOP (264) 37
    MULOP (265) 38 63
    ANDOP (266) 55
    RELOP (267) 39 60
    ARROW (268) 32 50 51 52
    REMOP (269) 64
    EXPOP (270) 66
    NEGOP (271) 69
    OROP (272) 53
    NOTOP (273) 57
    LEFT (274) 35
    RIGHT (275) 36
    ELSIF (276) 45
    ENDFOLD (277) 34
    FOLD (278) 34
    IF (279) 42
    THEN (280) 42 45
    ENDIF (281) 42
    BEGIN_ (282) 21
    CASE (283) 50 51 52
    CHARACTER (284) 11
    ELSE (285) 46
    END (286) 21
    ENDSWITCH (287) 31 32
    FUNCTION (288) 2 3
    INTEGER (289) 10
    IS (290) 16 17 31 32
    LIST (291) 17
    OF (292) 17
    OTHERS (293) 32
    RETURNS (294) 2
    SWITCH (295) 31 32
    WHEN (296) 33


Nonterminals, with rules where they appear

    $accept (47)
        on left: 0
    function (48)
        on left: 1
        on right: 0
    function_header (49)
        on left: 2 3
        on right: 1
    parameters (50)
        on left: 4 5
        on right: 2
    parameter_list (51)
        on left: 6 7 8
        on right: 5 7 8
    parameter (52)
        on left: 9
        on right: 6 7
    type (53)
        on left: 10 11 12
        on right: 2 9 16 17
    optional_variable (54)
        on left: 13 14 15
        on right: 1 13 14
    variable (55)
        on left: 16 17
        on right: 13
    list (56)
        on left: 18
        on right: 17 40
    expressions (57)
        on left: 19 20
        on right: 18 19
    body (58)
        on left: 21
        on right: 1
    statements (59)
        on left: 22 23
        on right: 21 22 42 45 46 50 51
    statement_ (60)
        on left: 24 25
        on right: 22
    statement (61)
        on left: 26 27 28 29 30
        on right: 16 24 32
    switch_statement (62)
        on left: 31 32
        on right: 30
    when_statement (63)
        on left: 33
        on right: 29
    fold_statement (64)
        on left: 34
        on right: 28
    direction (65)
        on left: 35 36
        on right: 34
    operator (66)
        on left: 37 38 39
        on right: 34 61
    operand (67)
        on left: 40 41
        on right: 34
    if_statement (68)
        on left: 42
        on right: 27
    elsif_clauses (69)
        on left: 43 44
        on right: 42 43
    elsif_clause (70)
        on left: 45
        on right: 43
    optional_else (71)
        on left: 46 47
        on right: 42
    cases (72)
        on left: 48 49
        on right: 31 32 48
    case (73)
        on left: 50 51 52
        on right: 48
    condition (74)
        on left: 53 54
        on right: 33 42 45 53 59
    logical_and (75)
        on left: 55 56
        on right: 53 54 55
    logical_not (76)
        on left: 57 58
        on right: 55 56 57
    relation (77)
        on left: 59 60
        on right: 58
    expression (78)
        on left: 61 62
        on right: 19 20 26 31 32 33 60 61 68 74
    term (79)
        on left: 63 64 65
        on right: 61 62 63 64
    factor (80)
        on left: 66 67
        on right: 63 64 65 66
    primary (81)
        on left: 68 69 70 71 72 73 74 75
        on right: 66 67 69


State 0

    0 $accept: • function $end

    FUNCTION  shift, and go to state 1

    function         go to state 2
    function_header  go to state 3


State 1

    2 function_header: FUNCTION • IDENTIFIER parameters RETURNS type ';'
    3                | FUNCTION • IDENTIFIER error ';'

    IDENTIFIER  shift, and go to state 4


State 2

    0 $accept: function • $end

    $end  shift, and go to state 5


State 3

    1 function: function_header • optional_variable body

    $default  reduce using rule 15 (optional_variable)

    optional_variable  go to state 6


State 4

    2 function_header: FUNCTION IDENTIFIER • parameters RETURNS type ';'
    3                | FUNCTION IDENTIFIER • error ';'

    error       shift, and go to state 7
    IDENTIFIER  shift, and go to state 8

    RETURNS  reduce using rule 4 (parameters)

    parameters      go to state 9
    parameter_list  go to state 10
    parameter       go to state 11


State 5

    0 $accept: function $end •

    $default  accept


State 6

    1 function: function_header optional_variable • body
   13 optional_variable: optional_variable • variable
   14                  | optional_variable • error

    error       shift, and go to state 12
    IDENTIFIER  shift, and go to state 13
    BEGIN_      shift, and go to state 14

    variable  go to state 15
    body      go to state 16


State 7

    3 function_header: FUNCTION IDENTIFIER error • ';'

    ';'  shift, and go to state 17


State 8

    9 parameter: IDENTIFIER • ':' type

    ':'  shift, and go to state 18


State 9

    2 function_header: FUNCTION IDENTIFIER parameters • RETURNS type ';'

    RETURNS  shift, and go to state 19


State 10

    5 parameters: parameter_list •
    7 parameter_list: parameter_list • ',' parameter
    8               | parameter_list • error

    error  shift, and go to state 20
    ','    shift, and go to state 21

    RETURNS  reduce using rule 5 (parameters)


State 11

    6 parameter_list: parameter •

    $default  reduce using rule 6 (parameter_list)


State 12

   14 optional_variable: optional_variable error •

    $default  reduce using rule 14 (optional_variable)


State 13

   16 variable: IDENTIFIER • ':' type IS statement ';'
   17         | IDENTIFIER • ':' LIST OF type IS list ';'

    ':'  shift, and go to state 22


State 14

   21 body: BEGIN_ • statements END ';'

    $default  reduce using rule 23 (statements)

    statements  go to state 23


State 15

   13 optional_variable: optional_variable variable •

    $default  reduce using rule 13 (optional_variable)


State 16

    1 function: function_header optional_variable body •

    $default  reduce using rule 1 (function)


State 17

    3 function_header: FUNCTION IDENTIFIER error ';' •

    $default  reduce using rule 3 (function_header)


State 18

    9 parameter: IDENTIFIER ':' • type

    REAL       shift, and go to state 24
    CHARACTER  shift, and go to state 25
    INTEGER    shift, and go to state 26

    type  go to state 27


State 19

    2 function_header: FUNCTION IDENTIFIER parameters RETURNS • type ';'

    REAL       shift, and go to state 24
    CHARACTER  shift, and go to state 25
    INTEGER    shift, and go to state 26

    type  go to state 28


State 20

    8 parameter_list: parameter_list error •

    $default  reduce using rule 8 (parameter_list)


State 21

    7 parameter_list: parameter_list ',' • parameter

    IDENTIFIER  shift, and go to state 8

    parameter  go to state 29


State 22

   16 variable: IDENTIFIER ':' • type IS statement ';'
   17         | IDENTIFIER ':' • LIST OF type IS list ';'

    REAL       shift, and go to state 24
    CHARACTER  shift, and go to state 25
    INTEGER    shift, and go to state 26
    LIST       shift, and go to state 30

    type  go to state 31


State 23

   21 body: BEGIN_ statements • END ';'
   22 statements: statements • statement_

    error         shift, and go to state 32
    IDENTIFIER    shift, and go to state 33
    INT_LITERAL   shift, and go to state 34
    CHAR_LITERAL  shift, and go to state 35
    HEX_LITERAL   shift, and go to state 36
    REAL_LITERAL  shift, and go to state 37
    NEGOP         shift, and go to state 38
    FOLD          shift, and go to state 39
    IF            shift, and go to state 40
    END           shift, and go to state 41
    SWITCH        shift, and go to state 42
    WHEN          shift, and go to state 43
    '('           shift, and go to state 44

    statement_        go to state 45
    statement         go to state 46
    switch_statement  go to state 47
    when_statement    go to state 48
    fold_statement    go to state 49
    if_statement      go to state 50
    expression        go to state 51
    term              go to state 52
    factor            go to state 53
    primary           go to state 54


State 24

   12 type: REAL •

    $default  reduce using rule 12 (type)


State 25

   11 type: CHARACTER •

    $default  reduce using rule 11 (type)


State 26

   10 type: INTEGER •

    $default  reduce using rule 10 (type)


State 27

    9 parameter: IDENTIFIER ':' type •

    $default  reduce using rule 9 (parameter)


State 28

    2 function_header: FUNCTION IDENTIFIER parameters RETURNS type • ';'

    ';'  shift, and go to state 55


State 29

    7 parameter_list: parameter_list ',' parameter •

    $default  reduce using rule 7 (parameter_list)


State 30

   17 variable: IDENTIFIER ':' LIST • OF type IS list ';'

    OF  shift, and go to state 56


State 31

   16 variable: IDENTIFIER ':' type • IS statement ';'

    IS  shift, and go to state 57


State 32

   25 statement_: error • ';'

    ';'  shift, and go to state 58


State 33

   74 primary: IDENTIFIER • '(' expression ')'
   75        | IDENTIFIER •

    '('  shift, and go to state 59

    $default  reduce using rule 75 (primary)


State 34

   70 primary: INT_LITERAL •

    $default  reduce using rule 70 (primary)


State 35

   71 primary: CHAR_LITERAL •

    $default  reduce using rule 71 (primary)


State 36

   73 primary: HEX_LITERAL •

    $default  reduce using rule 73 (primary)


State 37

   72 primary: REAL_LITERAL •

    $default  reduce using rule 72 (primary)


State 38

   69 primary: NEGOP • primary

    IDENTIFIER    shift, and go to state 33
    INT_LITERAL   shift, and go to state 34
    CHAR_LITERAL  shift, and go to state 35
    HEX_LITERAL   shift, and go to state 36
    REAL_LITERAL  shift, and go to state 37
    NEGOP         shift, and go to state 38
    '('           shift, and go to state 44

    primary  go to state 60


State 39

   34 fold_statement: FOLD • direction operator operand ENDFOLD

    LEFT   shift, and go to state 61
    RIGHT  shift, and go to state 62

    direction  go to state 63


State 40

   42 if_statement: IF • condition THEN statements elsif_clauses optional_else ENDIF

    IDENTIFIER    shift, and go to state 33
    INT_LITERAL   shift, and go to state 34
    CHAR_LITERAL  shift, and go to state 35
    HEX_LITERAL   shift, and go to state 36
    REAL_LITERAL  shift, and go to state 37
    NEGOP         shift, and go to state 38
    NOTOP         shift, and go to state 64
    '('           shift, and go to state 65

    condition    go to state 66
    logical_and  go to state 67
    logical_not  go to state 68
    relation     go to state 69
    expression   go to state 70
    term         go to state 52
    factor       go to state 53
    primary      go to state 54


State 41

   21 body: BEGIN_ statements END • ';'

    ';'  shift, and go to state 71


State 42

   31 switch_statement: SWITCH • expression IS cases ENDSWITCH
   32                 | SWITCH • expression IS cases OTHERS ARROW statement ';' ENDSWITCH

    IDENTIFIER    shift, and go to state 33
    INT_LITERAL   shift, and go to state 34
    CHAR_LITERAL  shift, and go to state 35
    HEX_LITERAL   shift, and go to state 36
    REAL_LITERAL  shift, and go to state 37
    NEGOP         shift, and go to state 38
    '('           shift, and go to state 44

    expression  go to state 72
    term        go to state 52
    factor      go to state 53
    primary     go to state 54


State 43

   33 when_statement: WHEN • condition ',' expression ':' expression

    IDENTIFIER    shift, and go to state 33
    INT_LITERAL   shift, and go to state 34
    CHAR_LITERAL  shift, and go to state 35
    HEX_LITERAL   shift, and go to state 36
    REAL_LITERAL  shift, and go to state 37
    NEGOP         shift, and go to state 38
    NOTOP         shift, and go to state 64
    '('           shift, and go to state 65

    condition    go to state 73
    logical_and  go to state 67
    logical_not  go to state 68
    relation     go to state 69
    expression   go to state 70
    term         go to state 52
    factor       go to state 53
    primary      go to state 54


State 44

   68 primary: '(' • expression ')'

    IDENTIFIER    shift, and go to state 33
    INT_LITERAL   shift, and go to state 34
    CHAR_LITERAL  shift, and go to state 35
    HEX_LITERAL   shift, and go to state 36
    REAL_LITERAL  shift, and go to state 37
    NEGOP         shift, and go to state 38
    '('           shift, and go to state 44

    expression  go to state 74
    term        go to state 52
    factor      go to state 53
    primary     go to state 54


State 45

   22 statements: statements statement_ •

    $default  reduce using rule 22 (statements)


State 46

   24 statement_: statement • ';'

    ';'  shift, and go to state 75


State 47

   30 statement: switch_statement •

    $default  reduce using rule 30 (statement)


State 48

   29 statement: when_statement •

    $default  reduce using rule 29 (statement)


State 49

   28 statement: fold_statement •

    $default  reduce using rule 28 (statement)


State 50

   27 statement: if_statement •

    $default  reduce using rule 27 (statement)


State 51

   26 statement: expression •
   61 expression: expression • operator term

    ADDOP  shift, and go to state 76
    MULOP  shift, and go to state 77
    RELOP  shift, and go to state 78

    $default  reduce using rule 26 (statement)

    operator  go to state 79


State 52

   62 expression: term •
   63 term: term • MULOP factor
   64     | term • REMOP factor

    MULOP  shift, and go to state 80
    REMOP  shift, and go to state 81

    MULOP     [reduce using rule 62 (expression)]
    $default  reduce using rule 62 (expression)


State 53

   65 term: factor •
   66 factor: factor • EXPOP primary

    EXPOP  shift, and go to state 82

    $default  reduce using rule 65 (term)


State 54

   67 factor: primary •

    $default  reduce using rule 67 (factor)


State 55

    2 function_header: FUNCTION IDENTIFIER parameters RETURNS type ';' •

    $default  reduce using rule 2 (function_header)


State 56

   17 variable: IDENTIFIER ':' LIST OF • type IS list ';'

    REAL       shift, and go to state 24
    CHARACTER  shift, and go to state 25
    INTEGER    shift, and go to state 26

    type  go to state 83


State 57

   16 variable: IDENTIFIER ':' type IS • statement ';'

    IDENTIFIER    shift, and go to state 33
    INT_LITERAL   shift, and go to state 34
    CHAR_LITERAL  shift, and go to state 35
    HEX_LITERAL   shift, and go to state 36
    REAL_LITERAL  shift, and go to state 37
    NEGOP         shift, and go to state 38
    FOLD          shift, and go to state 39
    IF            shift, and go to state 40
    SWITCH        shift, and go to state 42
    WHEN          shift, and go to state 43
    '('           shift, and go to state 44

    statement         go to state 84
    switch_statement  go to state 47
    when_statement    go to state 48
    fold_statement    go to state 49
    if_statement      go to state 50
    expression        go to state 51
    term              go to state 52
    factor            go to state 53
    primary           go to state 54


State 58

   25 statement_: error ';' •

    $default  reduce using rule 25 (statement_)


State 59

   74 primary: IDENTIFIER '(' • expression ')'

    IDENTIFIER    shift, and go to state 33
    INT_LITERAL   shift, and go to state 34
    CHAR_LITERAL  shift, and go to state 35
    HEX_LITERAL   shift, and go to state 36
    REAL_LITERAL  shift, and go to state 37
    NEGOP         shift, and go to state 38
    '('           shift, and go to state 44

    expression  go to state 85
    term        go to state 52
    factor      go to state 53
    primary     go to state 54


State 60

   69 primary: NEGOP primary •

    $default  reduce using rule 69 (primary)


State 61

   35 direction: LEFT •

    $default  reduce using rule 35 (direction)


State 62

   36 direction: RIGHT •

    $default  reduce using rule 36 (direction)


State 63

   34 fold_statement: FOLD direction • operator operand ENDFOLD

    ADDOP  shift, and go to state 76
    MULOP  shift, and go to state 77
    RELOP  shift, and go to state 78

    operator  go to state 86


State 64

   57 logical_not: NOTOP • logical_not

    IDENTIFIER    shift, and go to state 33
    INT_LITERAL   shift, and go to state 34
    CHAR_LITERAL  shift, and go to state 35
    HEX_LITERAL   shift, and go to state 36
    REAL_LITERAL  shift, and go to state 37
    NEGOP         shift, and go to state 38
    NOTOP         shift, and go to state 64
    '('           shift, and go to state 65

    logical_not  go to state 87
    relation     go to state 69
    expression   go to state 70
    term         go to state 52
    factor       go to state 53
    primary      go to state 54


State 65

   59 relation: '(' • condition ')'
   68 primary: '(' • expression ')'

    IDENTIFIER    shift, and go to state 33
    INT_LITERAL   shift, and go to state 34
    CHAR_LITERAL  shift, and go to state 35
    HEX_LITERAL   shift, and go to state 36
    REAL_LITERAL  shift, and go to state 37
    NEGOP         shift, and go to state 38
    NOTOP         shift, and go to state 64
    '('           shift, and go to state 65

    condition    go to state 88
    logical_and  go to state 67
    logical_not  go to state 68
    relation     go to state 69
    expression   go to state 89
    term         go to state 52
    factor       go to state 53
    primary      go to state 54


State 66

   42 if_statement: IF condition • THEN statements elsif_clauses optional_else ENDIF
   53 condition: condition • OROP logical_and

    OROP  shift, and go to state 90
    THEN  shift, and go to state 91


State 67

   54 condition: logical_and •
   55 logical_and: logical_and • ANDOP logical_not

    ANDOP  shift, and go to state 92

    $default  reduce using rule 54 (condition)


State 68

   56 logical_and: logical_not •

    $default  reduce using rule 56 (logical_and)


State 69

   58 logical_not: relation •

    $default  reduce using rule 58 (logical_not)


State 70

   60 relation: expression • RELOP expression
   61 expression: expression • operator term

    ADDOP  shift, and go to state 76
    MULOP  shift, and go to state 77
    RELOP  shift, and go to state 93

    operator  go to state 79


State 71

   21 body: BEGIN_ statements END ';' •

    $default  reduce using rule 21 (body)


State 72

   31 switch_statement: SWITCH expression • IS cases ENDSWITCH
   32                 | SWITCH expression • IS cases OTHERS ARROW statement ';' ENDSWITCH
   61 expression: expression • operator term

    ADDOP  shift, and go to state 76
    MULOP  shift, and go to state 77
    RELOP  shift, and go to state 78
    IS     shift, and go to state 94

    operator  go to state 79


State 73

   33 when_statement: WHEN condition • ',' expression ':' expression
   53 condition: condition • OROP logical_and

    OROP  shift, and go to state 90
    ','   shift, and go to state 95


State 74

   61 expression: expression • operator term
   68 primary: '(' expression • ')'

    ADDOP  shift, and go to state 76
    MULOP  shift, and go to state 77
    RELOP  shift, and go to state 78
    ')'    shift, and go to state 96

    operator  go to state 79


State 75

   24 statement_: statement ';' •

    $default  reduce using rule 24 (statement_)


State 76

   37 operator: ADDOP •

    $default  reduce using rule 37 (operator)


State 77

   38 operator: MULOP •

    $default  reduce using rule 38 (operator)


State 78

   39 operator: RELOP •

    $default  reduce using rule 39 (operator)


State 79

   61 expression: expression operator • term

    IDENTIFIER    shift, and go to state 33
    INT_LITERAL   shift, and go to state 34
    CHAR_LITERAL  shift, and go to state 35
    HEX_LITERAL   shift, and go to state 36
    REAL_LITERAL  shift, and go to state 37
    NEGOP         shift, and go to state 38
    '('           shift, and go to state 44

    term     go to state 97
    factor   go to state 53
    primary  go to state 54


State 80

   63 term: term MULOP • factor

    IDENTIFIER    shift, and go to state 33
    INT_LITERAL   shift, and go to state 34
    CHAR_LITERAL  shift, and go to state 35
    HEX_LITERAL   shift, and go to state 36
    REAL_LITERAL  shift, and go to state 37
    NEGOP         shift, and go to state 38
    '('           shift, and go to state 44

    factor   go to state 98
    primary  go to state 54


State 81

   64 term: term REMOP • factor

    IDENTIFIER    shift, and go to state 33
    INT_LITERAL   shift, and go to state 34
    CHAR_LITERAL  shift, and go to state 35
    HEX_LITERAL   shift, and go to state 36
    REAL_LITERAL  shift, and go to state 37
    NEGOP         shift, and go to state 38
    '('           shift, and go to state 44

    factor   go to state 99
    primary  go to state 54


State 82

   66 factor: factor EXPOP • primary

    IDENTIFIER    shift, and go to state 33
    INT_LITERAL   shift, and go to state 34
    CHAR_LITERAL  shift, and go to state 35
    HEX_LITERAL   shift, and go to state 36
    REAL_LITERAL  shift, and go to state 37
    NEGOP         shift, and go to state 38
    '('           shift, and go to state 44

    primary  go to state 100


State 83

   17 variable: IDENTIFIER ':' LIST OF type • IS list ';'

    IS  shift, and go to state 101


State 84

   16 variable: IDENTIFIER ':' type IS statement • ';'

    ';'  shift, and go to state 102


State 85

   61 expression: expression • operator term
   74 primary: IDENTIFIER '(' expression • ')'

    ADDOP  shift, and go to state 76
    MULOP  shift, and go to state 77
    RELOP  shift, and go to state 78
    ')'    shift, and go to state 103

    operator  go to state 79


State 86

   34 fold_statement: FOLD direction operator • operand ENDFOLD

    IDENTIFIER  shift, and go to state 104
    '('         shift, and go to state 105

    list     go to state 106
    operand  go to state 107


State 87

   57 logical_not: NOTOP logical_not •

    $default  reduce using rule 57 (logical_not)


State 88

   53 condition: condition • OROP logical_and
   59 relation: '(' condition • ')'

    OROP  shift, and go to state 90
    ')'   shift, and go to state 108


State 89

   60 relation: expression • RELOP expression
   61 expression: expression • operator term
   68 primary: '(' expression • ')'

    ADDOP  shift, and go to state 76
    MULOP  shift, and go to state 77
    RELOP  shift, and go to state 93
    ')'    shift, and go to state 96

    operator  go to state 79


State 90

   53 condition: condition OROP • logical_and

    IDENTIFIER    shift, and go to state 33
    INT_LITERAL   shift, and go to state 34
    CHAR_LITERAL  shift, and go to state 35
    HEX_LITERAL   shift, and go to state 36
    REAL_LITERAL  shift, and go to state 37
    NEGOP         shift, and go to state 38
    NOTOP         shift, and go to state 64
    '('           shift, and go to state 65

    logical_and  go to state 109
    logical_not  go to state 68
    relation     go to state 69
    expression   go to state 70
    term         go to state 52
    factor       go to state 53
    primary      go to state 54


State 91

   42 if_statement: IF condition THEN • statements elsif_clauses optional_else ENDIF

    $default  reduce using rule 23 (statements)

    statements  go to state 110


State 92

   55 logical_and: logical_and ANDOP • logical_not

    IDENTIFIER    shift, and go to state 33
    INT_LITERAL   shift, and go to state 34
    CHAR_LITERAL  shift, and go to state 35
    HEX_LITERAL   shift, and go to state 36
    REAL_LITERAL  shift, and go to state 37
    NEGOP         shift, and go to state 38
    NOTOP         shift, and go to state 64
    '('           shift, and go to state 65

    logical_not  go to state 111
    relation     go to state 69
    expression   go to state 70
    term         go to state 52
    factor       go to state 53
    primary      go to state 54


State 93

   39 operator: RELOP •
   60 relation: expression RELOP • expression

    IDENTIFIER    shift, and go to state 33
    INT_LITERAL   shift, and go to state 34
    CHAR_LITERAL  shift, and go to state 35
    HEX_LITERAL   shift, and go to state 36
    REAL_LITERAL  shift, and go to state 37
    NEGOP         shift, and go to state 38
    '('           shift, and go to state 44

    IDENTIFIER    [reduce using rule 39 (operator)]
    INT_LITERAL   [reduce using rule 39 (operator)]
    CHAR_LITERAL  [reduce using rule 39 (operator)]
    HEX_LITERAL   [reduce using rule 39 (operator)]
    REAL_LITERAL  [reduce using rule 39 (operator)]
    NEGOP         [reduce using rule 39 (operator)]
    '('           [reduce using rule 39 (operator)]

    expression  go to state 112
    term        go to state 52
    factor      go to state 53
    primary     go to state 54


State 94

   31 switch_statement: SWITCH expression IS • cases ENDSWITCH
   32                 | SWITCH expression IS • cases OTHERS ARROW statement ';' ENDSWITCH

    $default  reduce using rule 49 (cases)

    cases  go to state 113


State 95

   33 when_statement: WHEN condition ',' • expression ':' expression

    IDENTIFIER    shift, and go to state 33
    INT_LITERAL   shift, and go to state 34
    CHAR_LITERAL  shift, and go to state 35
    HEX_LITERAL   shift, and go to state 36
    REAL_LITERAL  shift, and go to state 37
    NEGOP         shift, and go to state 38
    '('           shift, and go to state 44

    expression  go to state 114
    term        go to state 52
    factor      go to state 53
    primary     go to state 54


State 96

   68 primary: '(' expression ')' •

    $default  reduce using rule 68 (primary)


State 97

   61 expression: expression operator term •
   63 term: term • MULOP factor
   64     | term • REMOP factor

    MULOP  shift, and go to state 80
    REMOP  shift, and go to state 81

    MULOP     [reduce using rule 61 (expression)]
    $default  reduce using rule 61 (expression)


State 98

   63 term: term MULOP factor •
   66 factor: factor • EXPOP primary

    EXPOP  shift, and go to state 82

    $default  reduce using rule 63 (term)


State 99

   64 term: term REMOP factor •
   66 factor: factor • EXPOP primary

    EXPOP  shift, and go to state 82

    $default  reduce using rule 64 (term)


State 100

   66 factor: factor EXPOP primary •

    $default  reduce using rule 66 (factor)


State 101

   17 variable: IDENTIFIER ':' LIST OF type IS • list ';'

    '('  shift, and go to state 105

    list  go to state 115


State 102

   16 variable: IDENTIFIER ':' type IS statement ';' •
